--- a/index.html
+++ b/index.html
@@ -614,11 +614,12 @@
           <span class="contact-link-icon">🔗</span>
           Portfolio
         </a>
-        <a href="https://linkedin.com" target="_blank" class="contact-link">
+        <a href="https://linkedin.com" target="https://www.linkedin.com/in/ravi-krishna-s-211a3ab/" class="contact-link">
           <span class="contact-link-icon">💼</span>
           LinkedIn
         </a>
-        <a href="Ravi_Krishna_UX_Designer_Resume.docx" class="contact-link">
+        <a href="Ravi_Krishna_UX_Designer_Resume.docx" target="https://docs.google.com/document/d/1DSNGGPeVO-A3R4wesdVjvcCyYqT29y35/edit"
+          class="contact-link">
           <span class="contact-link-icon">📄</span>
           Download Resume
         </a>
