--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </div>
-    <a href="mailto:ravikrsh@gmail.com" class="nav-cta">Hire Me</a>
+    <a href="/cdn-cgi/l/email-protection#bac8dbccd3d1c8c9d2faddd7dbd3d694d9d5d7" class="nav-cta">Hire Me</a>
   </div>
 </nav>
 
@@ -419,7 +419,7 @@
       </p>
       <div class="hero-actions">
         <a href="#work" class="btn-primary">View My Work ↓</a>
-        <a href="mailto:ravikrsh@gmail.com" class="btn-secondary">Get In Touch</a>
+        <a href="/cdn-cgi/l/email-protection#e89a899e81839a9b80a88f85898184c68b8785" class="btn-secondary">Get In Touch</a>
       </div>
     </div>
   </div>
@@ -606,22 +606,17 @@
       <h2 class="reveal">Let's work <em>together</em></h2>
       <p class="reveal">I'm currently looking for UX Designer roles in gaming, edtech, or engagement-driven products. If something I've built resonates with what your team is working on, I'd love to talk.</p>
       <div class="contact-links reveal">
-        <a href="mailto:ravikrsh@gmail.com" class="contact-link">
+        <a href="/cdn-cgi/l/email-protection#51233027383a23223911363c30383d7f323e3c" class="contact-link">
           <span class="contact-link-icon">✉️</span>
-          ravikrsh@gmail.com
+          <span class="__cf_email__" data-cfemail="6b190a1d02001918032b0c060a020745080406">[email&#160;protected]</span>
         </a>
-        <a href="https://ravikrsh.myportfolio.com" target="_blank" class="contact-link">
-          <span class="contact-link-icon">🔗</span>
-          Portfolio
-        </a>
-        <a href="https://linkedin.com" target="https://www.linkedin.com/in/ravi-krishna-s-211a3ab/" class="contact-link">
+        <a href="https://linkedin.com" target="_blank" class="contact-link">
           <span class="contact-link-icon">💼</span>
           LinkedIn
         </a>
-        <a href="Ravi_Krishna_UX_Designer_Resume.docx" target="https://docs.google.com/document/d/1DSNGGPeVO-A3R4wesdVjvcCyYqT29y35/edit"
-          class="contact-link">
+        <a href="https://docs.google.com/document/d/1DSNGGPeVO-A3R4wesdVjvcCyYqT29y35/edit" target="_blank" class="contact-link">
           <span class="contact-link-icon">📄</span>
-          Download Resume
+          View Resume
         </a>
       </div>
     </div>
@@ -634,7 +629,7 @@
   <div class="footer-name">UX Designer · Coimbatore, India</div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
   // Custom cursor
   const cursor = document.getElementById('cursor');
   const ring = document.getElementById('cursorRing');
@@ -644,15 +639,4 @@
     cursor.style.left = mx + 'px'; cursor.style.top = my + 'px';
     rx += (mx - rx) * 0.15; ry += (my - ry) * 0.15;
     ring.style.left = rx + 'px'; ring.style.top = ry + 'px';
-    requestAnimationFrame(animateCursor);
-  }
-  animateCursor();
-
-  // Scroll reveal
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible'); });
-  }, { threshold: 0.1 });
-  document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
-</script>
-</body>
-</html>
+    requestAnimationFrame(animateCu
