--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
   <div class="footer-name">UX Designer · Coimbatore, India</div>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
   // Custom cursor
   const cursor = document.getElementById('cursor');
   const ring = document.getElementById('cursorRing');
@@ -639,4 +639,39 @@
     cursor.style.left = mx + 'px'; cursor.style.top = my + 'px';
     rx += (mx - rx) * 0.15; ry += (my - ry) * 0.15;
     ring.style.left = rx + 'px'; ring.style.top = ry + 'px';
-    requestAnimationFrame(animateCu
+    requestAnimationFrame(animateCursor);
+  }
+  animateCursor();
+
+  // Scroll reveal — also immediately show elements already in/above viewport
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible'); });
+  }, { threshold: 0.08 });
+
+  document.querySelectorAll('.reveal').forEach(el => {
+    const rect = el.getBoundingClientRect();
+    // If element is already visible or above the fold, show it immediately (no animation)
+    if (rect.top < window.innerHeight) {
+      el.style.transition = 'none';
+      el.classList.add('visible');
+      // Re-enable transitions after a tick so future scroll reveals still animate
+      setTimeout(() => { el.style.transition = ''; }, 50);
+    } else {
+      observer.observe(el);
+    }
+  });
+
+  // Also handle back/forward navigation (bfcache restore)
+  window.addEventListener('pageshow', () => {
+    document.querySelectorAll('.reveal').forEach(el => {
+      const rect = el.getBoundingClientRect();
+      if (rect.top < window.innerHeight) {
+        el.style.transition = 'none';
+        el.classList.add('visible');
+        setTimeout(() => { el.style.transition = ''; }, 50);
+      }
+    });
+  });
+</script>
+</body>
+</html>
