--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>✦</text></svg>">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ravi Krishna S — UX Designer</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -610,7 +611,7 @@
           <span class="contact-link-icon">✉️</span>
           <span class="__cf_email__" data-cfemail="6b190a1d02001918032b0c060a020745080406">[email&#160;protected]</span>
         </a>
-        <a href="https://linkedin.com" target="_blank" class="contact-link">
+        <a href="https://www.linkedin.com/in/ravi-krishna-s-211a3ab/" target="_blank" class="contact-link">
           <span class="contact-link-icon">💼</span>
           LinkedIn
         </a>
