--- a/cobalt_case_study.html
+++ b/cobalt_case_study.html
@@ -820,7 +820,7 @@
 <div class="next-section">
   <div class="next-label">Next Case Study</div>
   <div class="next-title">Data-Driven Design on<br><em>Live Facebook Games</em></div>
-  <a href="#" class="btn">View Zynga Case Study →</a>
+  <a href="zynga_case_study.html" class="btn">View Zynga Case Study →</a>
 </div>
 
 <!-- FOOTER -->
@@ -828,8 +828,8 @@
   <div class="footer-name">Ravi Krishna S</div>
   <div class="footer-links">
     <a href="/cdn-cgi/l/email-protection#a2d0c3d4cbc9d0d1cae2c5cfc3cbce8cc1cdcf"><span class="__cf_email__" data-cfemail="01736077686a73726941666c60686d2f626e6c">[email&#160;protected]</span></a>
-    <a href="#">Portfolio</a>
-    <a href="#">LinkedIn</a>
+    <a href="index.html">Home</a>
+    <a href="https://www.linkedin.com/in/ravi-krishna-s-211a3ab/" target="_blank">LinkedIn</a>
   </div>
 </footer>
 
