--- a/zynga_case_study.html
+++ b/zynga_case_study.html
@@ -721,12 +721,12 @@
 
 <!-- PREV / NEXT -->
 <div class="nav-section">
-  <a href="#" class="nav-card">
+  <a href="cobalt_case_study.html" class="nav-card">
     <div class="nav-direction">← Previous Case Study</div>
     <div class="nav-project">COBALT — <em>Gamified</em> Learning Platform</div>
     <span class="nav-arrow">←</span>
   </a>
-  <a href="#" class="nav-card" style="text-align:right;border-left:1px solid rgba(255,255,255,0.06);">
+  <a href="index.html" class="nav-card" style="text-align:right;border-left:1px solid rgba(255,255,255,0.06);">
     <div class="nav-direction">Back to Portfolio →</div>
     <div class="nav-project">View all <em>work</em></div>
     <span class="nav-arrow" style="display:block;">→</span>
@@ -738,8 +738,8 @@
   <div class="footer-name">Ravi Krishna S</div>
   <div class="footer-links">
     <a href="/cdn-cgi/l/email-protection#9ceefdeaf5f7eeeff4dcfbf1fdf5f0b2fff3f1"><span class="__cf_email__" data-cfemail="c8baa9bea1a3babba088afa5a9a1a4e6aba7a5">[email&#160;protected]</span></a>
-    <a href="#">Portfolio</a>
-    <a href="#">LinkedIn</a>
+    <a href="index.html">Home</a>
+    <a href="https://www.linkedin.com/in/ravi-krishna-s-211a3ab/" target="_blank">LinkedIn</a>
   </div>
 </footer>
 
